--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <!-- css -->
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Birendra Hansda | Personal Website</title>
 </head>
 <body>
 
@@ -20,20 +20,21 @@
       <div class="px-4 py-5 my-5 text-center hero">
         <img class="d-block mx-auto mb-4 pfp" src="./Assets/pfp.png" alt="profile picture" width="120" height="120">
         <h1 class="display-5 fw-bold text-body-emphasis">Hello</h1>
-        <div class="col-lg-6 mx-auto"><p class="lead mb-4">I am a hardworking and curious web designer with a good knowledge of the Design Theory and User Experience Design</p>
+        <div class="col-lg-5 mx-auto"><p class="lead mb-4">I am a hardworking and curious web designer with a good knowledge of <span><u>Design Theory</u></span> and <span><u>User Experience Design</u></span></p>
         </div>
       </div>
     </section>
+    <hr>
 
     <!-- Resume -->
     <section align ="center">
     
         <div class="row featurette">
-          <div class="col-md-7">
+          <div class="col-md-7 py-2">
             <h2 class="featurette-heading fw-normal lh-1">I am a Web Developer.</h2>
             <p class="lead">I have a good knowledge of HTML5 and CSS.</p>
           </div>
-          <div class="col-md-5"> 
+          <div class="col-md-5 py-2"> 
             <img src="./Assets/site-alt.png" alt="website logo" height="80px">
           </div>
         </div>
@@ -41,11 +42,11 @@
         <hr class="featurette-divider">
     
         <div class="row featurette my-2">
-          <div class="col-md-7 order-md-2">
-            <h2 class="featurette-heading fw-normal lh-1">I am a programmer.</h2>
+          <div class="col-md-7 order-md-2 py-2">
+            <h2 class="featurette-heading fw-normal lh-1">I am a Programmer.</h2>
             <p class="lead">I have good problem solving skills using programming. I can write programs in C and C++.</p>
             </div>
-          <div class="col-md-5 order-md-1">
+          <div class="col-md-5 order-md-1 py-2">
             <img src="./Assets/binary.png" alt="website logo" height="80px">
           </div>
         </div>
@@ -83,12 +84,12 @@
     <section>
 
     </section>
-
+    <hr>
     <!-- Contact Me  -->
     <section align="center">
       <div class="my-5">
-        <div class="p-5 text-center bg-body-tertiary">
-          <div class="container py-5">
+        <div class="p-2 text-center bg-body-tertiary">
+          <div class="container py-2">
             <h1 class="text-body-emphasis">Get In Touch</h1>
             <p class="col-lg-8 mx-auto lead">
               I'm always looking for new opportunities to collaborate on innovative tech solutions. Feel free to reach out!
