--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!-- Hero Section  -->
 
     <section>
-      <img class="banner" src="./Assets/Banner.png" alt="page-banner" height="681px">
+      <img class="banner" src="./Assets/Banner.png" alt="page-banner" width = "100%">
       <div class="px-4 py-5 my-5 text-center hero">
         <img class="d-block mx-auto mb-4 pfp" src="./Assets/pfp.png" alt="profile picture" width="120" height="120">
         <h1 class="display-5 fw-bold text-body-emphasis">Hello</h1>
