--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
 
   <div class="body-container">
     <!-- Hero Section  -->
-
     <section>
-      <img class="banner" src="./Assets/Banner.png" alt="page-banner" width = "100%">
+      
+      <img class="banner" src="./Assets/Banner.png" alt="page-banner" height="681px">
       <div class="px-4 py-5 my-5 text-center hero">
-        <img class="d-block mx-auto mb-4 pfp" src="./Assets/pfp.png" alt="profile picture" width="120" height="120">
+        <img class="d-block mx-auto mb-4 pfp" src="./Assets/pfp.png" alt="profile picture"  width="120" height="120">
         <h1 class="display-5 fw-bold text-body-emphasis">Hello</h1>
         <div class="col-lg-5 mx-auto"><p class="lead mb-4">I am a hardworking and curious web designer with a good knowledge of <span><u>Design Theory</u></span> and <span><u>User Experience Design</u></span></p>
         </div>
@@ -55,7 +55,7 @@
 
   <!-- Projects & Works -->
   <!-- <section>
-    
+
     </section> -->
 
     <!-- About Me  -->
