--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div class="row featurette">
           <div class="col-md-7 py-2">
             <h2 class="featurette-heading fw-normal lh-1">I am a Web Developer.</h2>
-            <p class="lead">I have a good knowledge of HTML5 and CSS.</p>
+            <p class="lead">I have a good knowledge of HTML5, CSS and JavaScript.</p>
           </div>
           <div class="col-md-5 py-2"> 
             <img src="./Assets/site-alt.png" alt="website logo" height="80px">
